Contact section mobile background fix

--- a/styles/_contactus.scss
+++ b/styles/_contactus.scss
@@ -19,7 +19,7 @@
     z-index: 0;
     @media screen and (max-width: 1050px) {
       background-position-x: center;
-      opacity: 0.2;
+      opacity: 0.4;
     }
   }
   .treeline-green {
